@@ -40,13 +40,13 @@ $config['dbTableNames']['bans']			= 'ajax_chat_bans';
 $config['dbTableNames']['invitations']	= 'ajax_chat_invitations';
 
 // Available languages:
-$config['langAvailable'] = array('ar','bg','bp','ca','cy','cz','de','dk','el','en','es','et','fi','fr','gl','he','hr','hu','in','it','ja','ka','kr','mk','nl','no','pl','ro','ru','sk','sl','sr','sv','th','tr','uk','zh','zh-tw');
+$config['langAvailable'] = array('ar','bg','bp','ca','cy','cz','de','dk','el','en','es','et','fi','fr','gl','he','hr','hu','in','it','ja','ka','kr','mk','nl','no','pl','pt','ro','ru','sk','sl','sr','sv','th','tr','uk','zh','zh-tw');
 // Default language:
 $config['langDefault'] = 'en';
 // Language names:
 $config['langNames'] = array('ar'=>'عربي','bg'=>'Български','bp'=>'Português (Brasil)','ca'=>'Català','cy'=>'Cymraeg','cz'=>'Česky','de'=>'Deutsch','dk'=>'Dansk','el'=>'Ελληνικα','en'=>'English','es'=>'Español',
 	'et'=>'Eesti','fi'=>'Suomi','fr'=>'Français','gl'=>'Galego','he'=>'עברית','hr' => 'Hrvatski','hu' => 'Magyar','in'=>'Bahasa Indonesia','it'=>'Italiano','ja'=>'日本語','ka'=>'ქართული','kr'=>'한 글','mk'=>'Македонски',
-	'nl'=>'Nederlands','no'=>'Norsk','pl'=> 'Polski','ro'=>'România','ru'=>'Русский','sk'=> 'Slovenčina','sl'=>'Slovensko','sr'=>'Srpski','sv'=> 'Svenska','th'=>'ภาษาไทย','tr'=>'Türkçe','uk'=>'Українська',
+	'nl'=>'Nederlands','no'=>'Norsk','pl'=> 'Polski','pt'=>'Português (Portugal)','ro'=>'România','ru'=>'Русский','sk'=> 'Slovenčina','sl'=>'Slovensko','sr'=>'Srpski','sv'=> 'Svenska','th'=>'ภาษาไทย','tr'=>'Türkçe','uk'=>'Українська',
 	'zh'=>'中文 (简体)','zh-tw'=>'中文 (繁體)');
 
 // Available styles:
