@@ -1,0 +1,124 @@
+<?php
+/*
+ * @package AJAX_Chat
+ * @author Sebastian Tschan
+ * @author of translate Carlos Rocha (aka Broas@)
+ * @copyright (c) Sebastian Tschan
+ * @license GNU Affero General Public License
+ * @link https://blueimp.net/ajax/
+ */
+
+$lang = array();
+$lang['title'] = 'AJAX Chat';
+$lang['userName'] = 'Nick';
+$lang['password'] = 'Password';
+$lang['login'] = 'Entrar';
+$lang['logout'] = 'Sair';
+$lang['channel'] = 'Sala';
+$lang['style'] = 'Aparência';
+$lang['language'] = 'Idioma';
+$lang['inputLineBreak'] = 'Prima SHIFT+ENTER para inserir uma quebra de linha';
+$lang['messageSubmit'] = 'Enviar';
+$lang['registeredUsers'] = 'Utilizadores registados';
+$lang['onlineUsers'] = 'Utilizadores online';
+$lang['toggleAutoScroll'] = 'Ligar/Desligar scroll automático';
+$lang['toggleAudio'] = 'Ligar/Desligar som';
+$lang['toggleHelp'] = 'Mostrar/Esconder ajuda';
+$lang['toggleSettings'] = 'Mostrar/Esconder configurações';
+$lang['toggleOnlineList'] = 'Mostrar/Esconder listas online';
+$lang['bbCodeLabelBold'] = 'b';
+$lang['bbCodeLabelItalic'] = 'i';
+$lang['bbCodeLabelUnderline'] = 'u';
+$lang['bbCodeLabelQuote'] = 'Citar';
+$lang['bbCodeLabelCode'] = 'Código';
+$lang['bbCodeLabelURL'] = 'URL';
+$lang['bbCodeLabelImg'] = 'Imagem';
+$lang['bbCodeLabelColor'] = 'Cor da fonte';
+$lang['bbCodeTitleBold'] = 'Texto a negrito: [b]texto[/b]';
+$lang['bbCodeTitleItalic'] = 'Texto itálico: [i]texto[/i]';
+$lang['bbCodeTitleUnderline'] = 'Texto sublinhado: [u]texto[/u]';
+$lang['bbCodeTitleQuote'] = 'Citar texto: [quote]texto[/quote] ou [quote=autor]texto[/quote]';
+$lang['bbCodeTitleCode'] = 'Citar código: [code]código[/code]';
+$lang['bbCodeTitleURL'] = 'Inserir URL: [url]http://example.org[/url] ou [url=http://example.org]texto[/url]';
+$lang['bbCodeTitleImg'] = 'Inserir imagem: [img]http://example.org/imagem.jpg[/img]';
+$lang['bbCodeTitleColor'] = 'Cor da fonte: [color=red]texto[/color]';
+$lang['help'] = 'Ajuda';
+$lang['helpItemDescJoin'] = 'Entrar numa sala:';
+$lang['helpItemCodeJoin'] = '/join [Nome da sala]';
+$lang['helpItemDescJoinCreate'] = 'Criar sala privada (Só para utilizadores registados):';
+$lang['helpItemCodeJoinCreate'] = '/join';
+$lang['helpItemDescInvite'] = 'Convidar alguém para uma sala privada:';
+$lang['helpItemCodeInvite'] = '/invite [Utilizador]';
+$lang['helpItemDescUninvite'] = 'Cancelar convite';
+$lang['helpItemCodeUninvite'] = '/uninvite [Utilizador]';
+$lang['helpItemDescLogout'] = 'Sair do chat:';
+$lang['helpItemCodeLogout'] = '/quit';
+$lang['helpItemDescPrivateMessage'] = 'Enviar mensagem privada:';
+$lang['helpItemCodePrivateMessage'] = '/msg [Utilizador] [Texto]';
+$lang['helpItemDescQueryOpen'] = 'Abrir uma sala privada:';
+$lang['helpItemCodeQueryOpen'] = '/query [Utilizador]';
+$lang['helpItemDescQueryClose'] = 'Fechar uma sala privada:';
+$lang['helpItemCodeQueryClose'] = '/query';
+$lang['helpItemDescAction'] = 'Acção:';
+$lang['helpItemCodeAction'] = '/action [Texto]';
+$lang['helpItemDescDescribe'] = 'Descreve a acção em mensagem privada:';
+$lang['helpItemCodeDescribe'] = '/describe [Utilizador] [Texto]';
+$lang['helpItemDescIgnore'] = 'Adicionar/Remover utilizador à lista de ignorados:';
+$lang['helpItemCodeIgnore'] = '/ignore [Utilizador]';
+$lang['helpItemDescIgnoreList'] = 'Lista de utilizadores ignorados:';
+$lang['helpItemCodeIgnoreList'] = '/ignore';
+$lang['helpItemDescWhereis'] = 'Encontrar um utilizador:';
+$lang['helpItemCodeWhereis'] = '/whereis [Utilizador]';
+$lang['helpItemDescKick'] = 'Kickar um utilizador (Só Moderadores):';
+$lang['helpItemCodeKick'] = '/kick [Utilizador] [Minutos]';
+$lang['helpItemDescUnban'] = 'Desbanir um utilizador (Só Moderadores):';
+$lang['helpItemCodeUnban'] = '/unban [Utilizador]';
+$lang['helpItemDescBans'] = 'Lista de utilizadores banidos (Só Moderadores):';
+$lang['helpItemCodeBans'] = '/bans';
+$lang['helpItemDescWhois'] = 'Mostrar IP de um utilizador (Só Moderadores):';
+$lang['helpItemCodeWhois'] = '/whois [Utilizador]';
+$lang['helpItemDescWho'] = 'Lista de utilizadores online na sala:';
+$lang['helpItemCodeWho'] = '/who ou /who [Sala]';
+$lang['helpItemDescList'] = 'Lista canais diponíveis:';
+$lang['helpItemCodeList'] = '/list';
+$lang['helpItemDescRoll'] = 'Jogar dados:';
+$lang['helpItemCodeRoll'] = '/roll [números] [dados]';
+$lang['helpItemDescNick'] = 'Trocar de nick:';
+$lang['helpItemCodeNick'] = '/nick [Novo nick]';
+$lang['settings'] = 'Configurações';
+$lang['settingsBBCode'] = 'Permitir BBCode:';
+$lang['settingsBBCodeImages'] = 'Permitir BBCode para imagem:';
+$lang['settingsBBCodeColors'] = 'Permitir BBCode para cor da fonte:';
+$lang['settingsHyperLinks'] = 'Permitir URL:';
+$lang['settingsLineBreaks'] = 'Permitir quebra de linha:';
+$lang['settingsEmoticons'] = 'Permitir smileys:';
+$lang['settingsAutoFocus'] = 'Definir automaticamente a centrar-se no campo de pesquisa:';
+$lang['settingsMaxMessages'] = 'Número máximo de mensagens no Chat:';
+$lang['settingsWordWrap'] = 'Permitir palavras longas:';
+$lang['settingsMaxWordLength'] = 'O comprimento máximo de uma palavra é de:';
+$lang['settingsDateFormat'] = 'Formato da hora e data:';
+$lang['settingsPersistFontColor'] = 'Persistir cor da fonte:';
+$lang['settingsAudioVolume'] = 'Volume do som:';
+$lang['settingsSoundReceive'] = 'Som para as mensagens recebidas:';
+$lang['settingsSoundSend'] = 'Som de mensagens enviadas:';
+$lang['settingsSoundEnter'] = 'Som de login:';
+$lang['settingsSoundLeave'] = 'Som de logout:';
+$lang['settingsSoundChatBot'] = 'Som para mensagens do chatbot:';
+$lang['settingsSoundError'] = 'Som para mensagens de erro:';
+$lang['settingsBlink'] = 'Título da janela do "piscamento" em mensagens novas:';
+$lang['settingsBlinkInterval'] = 'Intervalo do "piscamento" em milissegundos:';
+$lang['settingsBlinkIntervalNumber'] = 'Número de intervalos do "piscamento":';
+$lang['playSelectedSound'] = 'Reproduzir o som selecionado';
+$lang['requiresJavaScript'] = 'O Javascript tem de estar ligado para entrares no Chat.';
+$lang['errorInvalidUser'] = 'Nick inválido.';
+$lang['errorUserInUse'] = 'Nick em uso.';
+$lang['errorBanned'] = 'O teu nick ou IP está banido.';
+$lang['errorMaxUsersLoggedIn'] = 'O chat atingiu o número máximo de utilizadores ligados.';
+$lang['errorChatClosed'] = 'O Chat está encerrado de momento.';
+$lang['logsTitle'] = 'AJAX Chat - Relatório';
+$lang['logsDate'] = 'Data';
+$lang['logsTime'] = 'Tempo';
+$lang['logsSearch'] = 'Procurar';
+$lang['logsPrivateChannels'] = 'Salas privadas';
+$lang['logsPrivateMessages'] = 'Mensagens privadas';
+?>
